--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,19 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+tools:context="cinepoilisklic.com.ia.elcirculodelexito.MenuActivity">
+
+
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="cinepoilisklic.com.ia.elcirculodelexito.MenuActivity">
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    android:layout_weight="1"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageButton
+        android:id="@+id/asesoria_tiempo"
+        android:background="#43bae7"
+        android:src="@drawable/reloj_icon_menos3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/asesoria_paquete"
+        android:background="#e8f5fa"
+        android:src="@drawable/icono_paquetes3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+
+</LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    android:layout_weight="1"
+    >
+
+    <ImageButton
+        android:id="@+id/alta_alumno"
+        android:background="#70b273"
+        android:src="@drawable/alumnosz40"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+
+    <ImageButton
+        android:id="@+id/alta_maestro"
+        android:background="#85a7d0"
+        android:src="@drawable/professor_icon28"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+
+</LinearLayout>
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    android:layout_weight="1"
+    >
+
+    <ImageButton
+        android:id="@+id/reporte_alumno"
+        android:background="#d2d2a6"
+        android:src="@drawable/informe35"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+
+
+    <ImageButton
+        android:id="@+id/reporte_maestro"
+        android:background="#98ddd4"
+        android:src="@drawable/reportecompu35"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+
+</LinearLayout>
+
+</LinearLayout>
+
