--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#95A5A6</color>
-    <color name="colorPrimaryDark">#7B241C</color>
+    <color name="colorPrimary">#7B241C</color>
+    <color name="colorPrimaryDark">#95A5A6</color>
     <color name="colorAccent">#476cad</color>
     <color name="baseAplicacion">#e7cf95</color>
 </resources>
