--- a/app/src/main/res/layout/content_alta_maestros.xml
+++ b/app/src/main/res/layout/content_alta_maestros.xml
@@ -17,17 +17,20 @@
 
         <LinearLayout
             android:layout_width="800dp"
-            android:layout_height="wrap_content"
+            android:layout_height="185dp"
             android:layout_marginTop="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <LinearLayout
                 android:layout_width="500dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
                 android:layout_marginRight="0dp"
                 android:orientation="vertical">
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:orientation="horizontal">
@@ -35,11 +38,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nombre del Alumno : " />
+                        android:text="Nombre del Maestro : " />
 
                     <EditText
+                        android:id="@+id/editText5"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="40dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -50,11 +54,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="nombre del padre o tutor : " />
+                        android:text="Teléfono" />
 
                     <EditText
+                        android:id="@+id/editText4"
                         android:layout_width="match_parent"
-                        android:layout_height="29dp" />
+                        android:layout_height="40dp"
+                        android:layout_marginTop="5dp" />
 
                 </LinearLayout>
 
@@ -65,34 +71,77 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="telefono del padre o tutor : " />
+                        android:text="Domicilio" />
 
                     <EditText
                         android:id="@+id/editText3"
                         android:layout_width="match_parent"
-                        android:layout_height="32dp" />
+                        android:layout_height="40dp" />
                 </LinearLayout>
+
                 <Button
                     android:id="@+id/btn_agregar_materia"
-                    android:layout_width="358dp"
+                    android:layout_width="273dp"
                     android:layout_height="30dp"
+                    android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:background="@drawable/select_materia"
                     android:text="agregar materia" />
 
             </LinearLayout>
 
+
+<LinearLayout
+
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <ImageView
+    android:src="@drawable/cameraa"
+    android:layout_width="100dp"
+    android:layout_height="50dp"
+    />
+    <ImageView
+        android:src="@drawable/ic_account_circle_black_24px"
+        android:layout_gravity="center"
+        android:layout_width="147dp"
+        android:layout_height="129dp"
+        />
+
+
+</LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/materias_recycler"
+                android:layout_width="541dp"
+                android:layout_height="138dp"
+                android:layout_gravity="left"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:background="#E7EE99"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="153dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Nivel" />
+                    android:text="Horario" />
 
                 <View
                     android:layout_width="match_parent"
@@ -108,105 +157,19 @@
                     <RadioButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Primaria" />
+                        android:text="Matutino" />
 
                     <RadioButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Secundaria" />
-
-
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Preparatoria" />
-
-
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Universidad" />
-
+                        android:text="Vespertino" />
 
                 </RadioGroup>
 
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/materias_recycler"
-            android:layout_width="520dp"
-            android:layout_height="80dp"
-            android:background="#E7EE99"
-            android:orientation="horizontal">
 
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/colorPrimaryDark" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="Costo total : " />
-
-            <EditText
-
-                android:id="@+id/editText2"
-                android:layout_width="164dp"
-                android:layout_height="25dp"
-                android:background="#E7EE99" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal"
-            android:weightSum="1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="Registro de pago : " />
-
-            <EditText
-                android:layout_width="131dp"
-                android:layout_height="25dp"
-                android:background="#E7EE99" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:layout_marginTop="5dp"
-            android:weightSum="1">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="Diferencia : " />
-
-            <EditText
-                android:id="@+id/editText"
-                android:layout_width="168dp"
-                android:layout_height="25dp"
-                android:background="#E7EE99" />
-        </LinearLayout>
 
     </LinearLayout>
 
