linkin reporte alumnos primera fase

--- a/app/src/main/res/layout/activity_reporte_alumnos.xml
+++ b/app/src/main/res/layout/activity_reporte_alumnos.xml
@@ -1,12 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/baseAplicacion"
-    tools:context="cinepoilisklic.com.ia.elcirculodelexito.ReporteAlumnosActivity">
+    android:fitsSystemWindows="true"
+    android:background="#e7cf95"
+    tools:context=".ReporteAlumnosActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-</LinearLayout>
+            <Spinner
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:id="@+id/spinner_buscador"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+
+            </Spinner>
+
+            <EditText
+                android:id="@+id/etSearchBox"
+                style="@style/EditTextFind"
+                android:layout_above="@+id/audio_rv"
+                android:hint="@string/buscar" />
+
+
+        </LinearLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/audio_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            app:layout_anchor="@id/etSearchBox"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
+
