--- a/app/src/main/res/layout/content_alta_maestros.xml
+++ b/app/src/main/res/layout/content_alta_maestros.xml
@@ -91,44 +91,63 @@
             </LinearLayout>
 
 
-<LinearLayout
+            <LinearLayout
 
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <ImageView
-    android:src="@drawable/cameraa"
-    android:layout_width="100dp"
-    android:layout_height="50dp"
-    />
-    <ImageView
-        android:src="@drawable/ic_account_circle_black_24px"
-        android:layout_gravity="center"
-        android:layout_width="147dp"
-        android:layout_height="129dp"
-        />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/IV_Foto"
+                    android:layout_width="147dp"
+                    android:layout_height="129dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_account_circle_black_24px" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
 
 
-</LinearLayout>
+
+
+
+                <ImageView
+                    android:layout_marginLeft="100dp"
+                    android:id="@+id/IV_Camara"
+                    android:layout_width="55dp"
+                    android:layout_height="28dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/cameraa" />
+                    <ImageView
+                        android:layout_marginLeft="20dp"
+                        android:id="@+id/overflow"
+                        android:layout_alignParentRight="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_more_vert_black_24px"
+                        android:layout_height="30dp"
+                        android:layout_width="20dp" />
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-            <LinearLayout
-                android:id="@+id/materias_recycler"
-                android:layout_width="541dp"
-                android:layout_height="138dp"
-                android:layout_gravity="left"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:background="#E7EE99"
-                android:orientation="horizontal">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/Rv_listaMaestros"
+                android:layout_width="299dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.77">
 
-            </LinearLayout>
+            </android.support.v7.widget.RecyclerView>
+
+
 
             <LinearLayout
                 android:layout_width="153dp"
@@ -167,10 +186,11 @@
                 </RadioGroup>
 
             </LinearLayout>
+        </LinearLayout>
 
         </LinearLayout>
 
 
-    </LinearLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
