--- a/app/src/main/res/layout/activity_alta_alumno.xml
+++ b/app/src/main/res/layout/activity_alta_alumno.xml
@@ -142,25 +142,25 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_width="120dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/paquete_materia_prueba" />
+                android:src="@drawable/matematicasx" />
 
             <ImageView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_width="120dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/paquete_materia_prueba_esp" />
+                android:src="@drawable/fisica" />
 
             <ImageView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_width="120dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/paquete_materia_prueba_tics"
+                android:src="@drawable/biologiax"
 
                 />
 
