--- a/app/src/main/res/layout/activity_asesorias_alumno.xml
+++ b/app/src/main/res/layout/activity_asesorias_alumno.xml
@@ -4,11 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e7cf95"
     tools:context="cinepoilisklic.com.ia.elcirculodelexito.AsesoriasAlumnoActivity">
 
-    <TextView
-        android:id="@+id/ash"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Spinner
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:id="@+id/spinner_buscador"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+
+            </Spinner>
+
+            <EditText
+                android:id="@+id/etSearchBox"
+                style="@style/EditTextFind"
+                android:layout_above="@+id/audio_rv"
+                android:hint="@string/buscar" />
+
+
+        </LinearLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/audio_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            app:layout_anchor="@id/etSearchBox"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
