--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -41,10 +41,21 @@
 
                     <TextView
                         android:id="@+id/name_alumno_reporte"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:text="nombre alumno"
+                        android:textColor="#FFFFFF"
+                        android:textSize="25sp" />
+
+
+                    <TextView
+                        android:id="@+id/id_alumno_reporte"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/info_text"
+                        android:paddingLeft="20dp"
+                        android:text="id"
                         android:textColor="#FFFFFF"
                         android:textSize="25sp" />
 
@@ -69,16 +80,6 @@
                         android:textSize="25sp" />
 
                     <TextView
-                        android:id="@+id/id_alumno_reporte"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/info_text"
-                        android:paddingLeft="20dp"
-                        android:text="id"
-                        android:textColor="#FFFFFF"
-                        android:textSize="25sp" />
-
-                    <TextView
                         android:id="@+id/horas_alumno_reporte"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -87,6 +88,18 @@
                         android:text="horas"
                         android:textColor="#FFFFFF"
                         android:textSize="25sp" />
+
+                    <TextView
+                        android:id="@+id/fecha_fin_paquete"
+                        android:text="fecha fin"
+                        android:paddingLeft="20dp"
+                        android:textColor="#FFFFFF"
+                        android:textSize="25sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+
+                        />
 
                 </LinearLayout>
             </LinearLayout>
