--- a/app/src/main/res/layout/activity_alta_alumno.xml
+++ b/app/src/main/res/layout/activity_alta_alumno.xml
@@ -11,18 +11,19 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_marginRight="10dp"
-            android:layout_width="400dp"
+            android:layout_width="wrap_content"
+            android:layout_weight="60"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
@@ -32,7 +33,7 @@
                     android:text="Nombre del Alumno : " />
 
                 <EditText
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
@@ -47,7 +48,7 @@
                     android:text="nombre del padre o tutor : " />
 
                 <EditText
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
@@ -62,7 +63,7 @@
                     android:text="telefono del padre o tutor : " />
 
                 <EditText
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
@@ -70,7 +71,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -166,13 +167,42 @@
 
 
 
-            <Button
-                android:id="@+id/btn_agregar_materia"
-                android:layout_margin="1dp"
-                android:background="@drawable/select_materia"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="agregar materia" />
+                android:orientation="horizontal"
+                >
+
+                <Spinner
+                    style="@style/Widget.AppCompat.Spinner.Underlined"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:id="@+id/spiner_materias"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                </Spinner>
+
+                <Spinner
+                    style="@style/Widget.AppCompat.Spinner.Underlined"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:id="@+id/spiner_horas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                </Spinner>
+
+                <Button
+                    android:id="@+id/btn_agregar_materia"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/select_materia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="agregar" />
+
+
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:background="@drawable/recycler"
