cambio radio button customizados

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#95A5A6</color>
     <color name="colorAccent">#7B241C</color>
     <color name="baseAplicacion">#e7cf95</color>
+    <color name="news_tomato">#e7412b</color>
+    <color name="news_white">#ffffff</color>
 </resources>
