--- a/app/src/main/res/layout/item_view_spiner.xml
+++ b/app/src/main/res/layout/item_view_spiner.xml
@@ -7,8 +7,8 @@
     android:ellipsize="marquee"
     android:paddingBottom="8dp"
     android:paddingTop="4dp"
-    android:background="@drawable/select_spinner"
+    android:background="@color/colorAccent"
     android:textAlignment="inherit"
-    android:textColor="#333333"
-    android:textSize="16sp">
+    android:textColor="#ffffff"
+    android:textSize="13sp">
 </TextView>
