seccion perfil. consultar id del alumno seleccionado de bdd y obtener sus datos

--- a/app/src/main/res/layout-land/activity_alta_alumno.xml
+++ b/app/src/main/res/layout-land/activity_alta_alumno.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/baseAplicacion"
-    tools:context="cinepoilisklic.com.ia.elcirculodelexito.AltaAlumnoActivity"
+    tools:context=".ui.registroAlumno.AltaAlumnoActivity"
     >
 
     <LinearLayout
