--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -40,7 +40,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/alta_alumno"
+            android:id="@+id/alumno"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
