--- a/app/src/main/res/layout/activity_asesorias_alumno.xml
+++ b/app/src/main/res/layout/activity_asesorias_alumno.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e7cf95"
-    tools:context="cinepoilisklic.com.ia.elcirculodelexito.AsesoriasAlumnoActivity">
+    tools:context="cinepoilisklic.com.ia.elcirculodelexito.ui.reporteAlumno.AsesoriasAlumnoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
