--- a/app/src/main/res/layout/item_materia.xml
+++ b/app/src/main/res/layout/item_materia.xml
@@ -1,96 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+        >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="1dp"
+        android:background="#cfd6d6"
+        android:padding="5dp"
         android:layout_margin="1dp"
         android:scrollbarSize="@dimen/activity_horizontal_margin"
-        >
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        app:cardCornerRadius="1dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
 
-            <ImageView
-                android:id="@+id/imagen_materia_cardView"
-                android:layout_width="70dp"
-                android:layout_height="50dp"
-                android:src="@mipmap/ic_launcher"
-                />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#cfd6d6"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/nombre_materia_cardview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="nombre"
-                    android:textSize="10sp"
+                <ImageView
+                    android:id="@+id/imagen_materia_cardView"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:src="@mipmap/ic_launcher" />
 
-                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/horas_materia_cardview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="horas"
-                    android:textSize="10sp"
+                    <TextView
+                        android:id="@+id/nombre_materia_cardview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="nombre"
+                        android:textSize="10sp"
 
-                    />
+                        />
 
-                <TextView
-                    android:id="@+id/fecha_materia_cardview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="fecha"
-                    android:textSize="10sp"
+                    <TextView
+                        android:id="@+id/horas_materia_cardview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="horas"
+                        android:textSize="10sp"
 
-                    />
+                        />
 
+                    <TextView
+                        android:id="@+id/fecha_materia_cardview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="fecha"
+                        android:textSize="10sp"
+
+                        />
+
+
+                </LinearLayout>
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="1dp"
+                    android:layout_marginRight="1dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/colorAccent"
+                    android:text="Eliminar"
+                    android:textAllCaps="false"
+                    android:textColor="@color/news_white" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="1dp"
+                    android:layout_marginRight="1dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/colorAccent"
+                    android:text="Editar"
+                    android:textAllCaps="false"
+                    android:textColor="@color/news_white" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-
-            <Button
-                android:text="eliminar"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-
-            <Button
-                android:text="Editar"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
 
     </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
