--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -1,108 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@color/colorAccent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/name_alumno_reporte"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="2dp">
+        android:padding="10dp"
+        android:text="nombre alumno"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp" />
 
-        <RelativeLayout
-            android:id="@+id/parent_body_rl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#7b241c"
-            android:orientation="vertical"
-            android:padding="2dp">
+    <View
+        android:background="@color/cardview_dark_background"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
 
-            <LinearLayout
-                android:id="@+id/parent_body_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_status"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:background="#e7cf95"
-                        />
-
-                    <TextView
-                        android:id="@+id/name_alumno_reporte"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="nombre alumno"
-                        android:textColor="#FFFFFF"
-                        android:textSize="25sp" />
-
-
-                    <TextView
-                        android:id="@+id/id_alumno_reporte"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/info_text"
-                        android:paddingLeft="20dp"
-                        android:text="id"
-                        android:textColor="#FFFFFF"
-                        android:textSize="25sp" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:padding="2dp">
-
-                    <TextView
-                        android:id="@+id/status_alumno_reporte"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/info_text"
-                        android:paddingLeft="20dp"
-                        android:text="status"
-                        android:textColor="#FFFFFF"
-                        android:textSize="25sp" />
-
-                    <TextView
-                        android:id="@+id/horas_alumno_reporte"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/info_text"
-                        android:paddingLeft="20dp"
-                        android:text="horas"
-                        android:textColor="#FFFFFF"
-                        android:textSize="25sp" />
-
-                    <TextView
-                        android:id="@+id/fecha_fin_paquete"
-                        android:text="fecha fin"
-                        android:paddingLeft="20dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="25sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-
-                        />
-
-                </LinearLayout>
-            </LinearLayout>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
 </LinearLayout>
