--- a/app/src/main/res/layout/activity_reporte_alumnos.xml
+++ b/app/src/main/res/layout/activity_reporte_alumnos.xml
@@ -25,7 +25,10 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="1dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/news_white"
             android:background="@drawable/btn"
             android:text="registro de pagos"
@@ -35,9 +38,12 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/audio_rv"
+            android:background="@color/news_white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
+            android:padding="5dp"
+            android:layout_margin="10dp"
             app:layout_anchor="@id/etSearchBox"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </LinearLayout>
