--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -2,6 +2,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="1dp"
     android:background="@color/colorAccent"
     android:layout_height="wrap_content">
 
@@ -12,11 +13,8 @@
         android:padding="10dp"
         android:text="nombre alumno"
         android:textColor="#FFFFFF"
-        android:textSize="25sp" />
+        android:textSize="15sp" />
 
-    <View
-        android:background="@color/cardview_dark_background"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"/>
+
 
 </LinearLayout>
