seccion alta paquete

--- a/app/src/main/res/layout/activity_alta_paquete.xml
+++ b/app/src/main/res/layout/activity_alta_paquete.xml
@@ -50,6 +50,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/tv_nombre_alumno"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Nombre del Alumno : " />
@@ -83,6 +84,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:id="@+id/rg_nivel"
                             android:layout_width="match_parent"
                             android:layout_height="27dp"
                             android:layout_gravity="center"
@@ -215,6 +217,7 @@
 
                             </android.support.v7.widget.RecyclerView>
 
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="20dp"
@@ -263,6 +266,8 @@
                                     android:text="Costo total : " />
 
                                 <EditText
+                                    android:id="@+id/et_alta_paquete_costo_total"
+                                    android:editable="false"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
@@ -279,6 +284,7 @@
                                     android:text="Registro de pago : " />
 
                                 <EditText
+                                    android:id="@+id/et_alta_paquete_registro_pago"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
 
@@ -286,6 +292,7 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
+                                android:orientation="horizontal"
                                 android:layout_margin="10dp"
                                 android:layout_height="40dp">
 
@@ -293,8 +300,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Diferencia : " />
-
                                 <EditText
+                                    android:id="@+id/et_alta_paquete_diferencia"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
@@ -316,15 +323,13 @@
 
 
                         <Button
-                            android:id="@+id/btn_generar_qr"
+                            android:id="@+id/btn_registrar_paquete"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="1dp"
                             android:textColor="@color/news_white"
                             android:background="@drawable/btn"
                             android:text="Registrar"
-
-
                             />
 
                     </LinearLayout>
