--- a/app/src/main/res/layout/activity_alta_alumn.xml
+++ b/app/src/main/res/layout/activity_alta_alumn.xml
@@ -107,6 +107,7 @@ tools:context=".ui.registroAlumno.AltaAlumnActivity">
             android:layout_margin="@dimen/btn_margin"
             android:background="@drawable/btn"
             android:text="@string/registrar"
+            android:textColor="@color/news_white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
