--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -17,8 +17,8 @@
     <Button
         android:textAllCaps="false"
         android:background="@drawable/btn"
-        android:id="@+id/opciones_btn_registro"
-        android:text="@string/registro"
+        android:id="@+id/opciones_btn_elegir_maestro"
+        android:text="@string/elegirMaestro"
         android:layout_margin="@dimen/btn_margin"
         android:textColor="@color/news_white"
         android:layout_width="match_parent"
