--- a/app/src/main/res/layout/activity_selecciona_alumno.xml
+++ b/app/src/main/res/layout/activity_selecciona_alumno.xml
@@ -1,36 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/baseAplicacion"
-    tools:context="cinepoilisklic.com.ia.elcirculodelexito.ui.transicionAlumno.SeleccionaAlumnoActivity">
+    android:background="#e7cf95"
+    android:fitsSystemWindows="true"
+    tools:context=".ui.activities.listaAlumnos.ListaAlumnosActivity">
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/fragment_list_alumnos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/etSearchBox"
-            android:layout_margin="5dp"
-            style="@style/EditTextFind"
-            android:layout_above="@+id/audio_rv"
-            android:hint="@string/buscar" />
+</android.support.design.widget.CoordinatorLayout>
 
-            />
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/audio_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            app:layout_anchor="@id/etSearchBox"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    </LinearLayout>
-
-</LinearLayout>
