--- a/app/src/main/res/layout/activity_alta_paquete.xml
+++ b/app/src/main/res/layout/activity_alta_paquete.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/baseAplicacion"
     android:baselineAligned="true"
-    android:orientation="vertical"
-    tools:context=".ui.registroAlumno.AltaAlumnoActivity">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -64,17 +63,19 @@
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="Nivel" />
-
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_margin="10dp"
                             android:background="@color/colorPrimaryDark" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:gravity="center"
+                            android:text="Nivel" />
+
+
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -155,6 +156,12 @@
 
                     </LinearLayout>
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="10dp"
+                        android:background="@color/colorPrimaryDark" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -190,10 +197,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_margin="2dp"
                                     android:layout_weight="1">
-
-
                                 </Spinner>
-
 
                             </LinearLayout>
 
@@ -214,45 +218,17 @@
                                 android:background="@drawable/recycler"
                                 android:orientation="horizontal">
 
+                            </android.support.v7.widget.RecyclerView>
+
+                            <android.support.v7.widget.RecyclerView
+                                android:id="@+id/materias_precio_recycler"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:orientation="horizontal">
 
                             </android.support.v7.widget.RecyclerView>
 
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="20dp"
-                                android:layout_margin="10dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="paquete : " />
-
-                                <TextView
-                                    android:text="matematicas $400"
-                                    android:fontFamily="sans-serif-smallcaps"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="20dp"
-                                android:layout_margin="10dp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="paquete : " />
-
-                                <TextView
-                                    android:text="Física : $400"
-                                    android:fontFamily="sans-serif-smallcaps"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content" />
-                            </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
