--- a/app/src/main/res/layout/activity_lista_maestros.xml
+++ b/app/src/main/res/layout/activity_lista_maestros.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cinepoilisklic.com.ia.elcirculodelexito.ui.listaMaestros.ListaMaestrosActivity">
+    tools:context=".ui.activities.listaMaestros.ListaMaestrosActivity">
 
 </android.support.constraint.ConstraintLayout>
