campos validados en altaalumno, paquete y maestro, checar elimincacion de paquetes

--- a/app/src/main/res/layout/item_materia.xml
+++ b/app/src/main/res/layout/item_materia.xml
@@ -81,6 +81,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btn_eliminar_materia"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="1dp"
@@ -93,6 +94,7 @@
                     android:textColor="@color/news_white" />
 
                 <Button
+                    android:id="@+id/btn_editar_materia"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="1dp"
