update BDD , UI entrar a clases.

--- a/app/src/main/res/layout/activity_alta_paquete.xml
+++ b/app/src/main/res/layout/activity_alta_paquete.xml
@@ -226,7 +226,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
                                 android:orientation="horizontal">
-
                             </android.support.v7.widget.RecyclerView>
 
 
@@ -273,6 +272,7 @@
                                 android:layout_height="40dp">
 
                                 <TextView
+                                    android:id="@+id/tv_diferencia"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Diferencia : " />
