--- a/app/src/main/res/layout/activity_seleccion_alumno_maestro.xml
+++ b/app/src/main/res/layout/activity_seleccion_alumno_maestro.xml
@@ -1,18 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e7cf95"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".ui.activities.listaAlumnos.ListaAlumnosActivity">
 
-    <FrameLayout
-        android:id="@+id/fragment_list_alumnos"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
-</android.support.design.widget.CoordinatorLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/etSearchBox_alumMaestro"
+                style="@style/EditTextFind"
+                android:layout_above="@+id/audio_rv"
+                android:layout_marginRight="22dp"
+                android:textAlignment="center"
+                android:layout_marginLeft="5dp"
+                android:hint="@string/buscar_alumno"
+                android:textAllCaps="false" />
+
+            <Spinner
+                android:id="@+id/spiner_alumnos"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:fontFamily="bold"></Spinner>
+
+            <ImageView
+                android:id="@+id/iv_alumn_maestro"
+                android:src="@drawable/alumnosz40"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_name_maestroalumno"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center"
+                android:text="Alumno"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"/>
+
+            <TextView
+                android:id="@+id/tv_nombre_alumno_inicioclase_paquete"
+                android:textAllCaps="false"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:text="nombre apellido apellido2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/etSearchBox_maestroAlumno"
+                style="@style/EditTextFind"
+                android:textAlignment="center"
+                android:layout_above="@+id/audio_rv"
+                android:layout_marginRight="22dp"
+                android:layout_marginLeft="5dp"
+                android:hint="@string/buscar_maestro"
+                android:textAllCaps="false" />
+
+            <Spinner
+                android:id="@+id/spiner_maestros"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"></Spinner>
+
+            <ImageView
+                android:id="@+id/iv_maestro_alumno"
+                android:src="@drawable/professor_icon28"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_name_alumnomaestro"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:text="Maestro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"/>
+
+            <TextView
+                android:textAlignment="center"
+                android:id="@+id/tv_nombre_maestro_inicioclase_paquete"
+                android:layout_marginTop="10dp"
+                android:textAllCaps="false"
+                android:text="nombre apellido apellido2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/materias_recycler_iniciar_clase"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/recycler"
+        android:orientation="horizontal"> </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/btn_inicio_clases_paquete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textColor="@color/news_white"
+        android:background="@drawable/btn"
+        android:text="iniciar clase "
+        />
+
+
+</LinearLayout>
 
