update entrar a clases

--- a/app/src/main/res/layout/activity_alta_paquete.xml
+++ b/app/src/main/res/layout/activity_alta_paquete.xml
@@ -278,6 +278,7 @@
                                     android:text="Diferencia : " />
                                 <EditText
                                     android:id="@+id/et_alta_paquete_diferencia"
+                                    android:editable="false"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content" />
                             </LinearLayout>
